--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 
   <!-- <script src="script.js"></script> -->
   <!-- <script src="simpleArrayMethods.js"></script> -->
-  <Script src="forEachMehtod.js"></Script>
+  <!-- <Script src="forEachMehtod.js"></Script> -->
+  <Script src="forEachSetsMaps.js"></Script>
 </body>
 
 </html>
