--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
-  <Script src="forEachSetsMaps.js"></Script>
+  <!-- <Script src="forEachSetsMaps.js"></Script> -->
 </body>
 
 </html>
