learned about the map method

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
-  <script src="challenge1.js"></script>
+  <!-- <script src="challenge1.js"></script> -->
+  <script src="mapMethod.js"></script>
 </body>
 
 </html>
