--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
   <!-- <script src="challenge1.js"></script> -->
   <!-- <script src="mapMethod.js"></script> -->
+  <script src="filter.js"></script>
 </body>
 
 </html>
