learned about the reduce method and added an new feature of displaying the total balance of account holder

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
   <!-- <script src="challenge1.js"></script> -->
   <!-- <script src="mapMethod.js"></script> -->
-  <script src="filter.js"></script>
+  <!-- <script src="filter.js"></script> -->
+  <script src="reduce.js"></script>
 </body>
 
 </html>
