done witht eth challenge

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
   <!-- <script src="challenge1.js"></script> -->
   <!-- <script src="mapMethod.js"></script> -->
   <!-- <script src="filter.js"></script> -->
-  <script src="reduce.js"></script>
+  <!-- <script src="reduce.js"></script> -->
+  <script src="challenge2.js"></script>
 </body>
 
 </html>
