--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -117,7 +117,10 @@
   <!-- <script src="mapMethod.js"></script> -->
   <!-- <script src="filter.js"></script> -->
   <!-- <script src="reduce.js"></script> -->
-  <script src="challenge2.js"></script>
+  <!-- <script src="challenge2.js"></script> 
+   -->
+  <!-- <script src="chainingMethods.js"></script> -->
+
 </body>
 
 </html>
