--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -120,6 +120,7 @@
   <!-- <script src="challenge2.js"></script> 
    -->
   <!-- <script src="chainingMethods.js"></script> -->
+  <!-- <script src="challenge3.js"></script> -->
 
 </body>
 
