learned about the find method

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
    -->
   <!-- <script src="chainingMethods.js"></script> -->
   <!-- <script src="challenge3.js"></script> -->
+  <Script src="findMethod.js"></Script>
 
 </body>
 
