--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -122,6 +122,7 @@
   <!-- <script src="chainingMethods.js"></script> -->
   <!-- <script src="challenge3.js"></script> -->
   <!-- <Script src="findMethod.js"></Script> -->
+  <script src="findLast.js"></script>
 
 </body>
 
