got to know  about the some and every function and added the loan function

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
   <!-- <script src="chainingMethods.js"></script> -->
   <!-- <script src="challenge3.js"></script> -->
   <!-- <Script src="findMethod.js"></Script> -->
-  <script src="findLast.js"></script>
+  <!-- <script src="findLast.js"></script> -->
+  <script src="someMethod.js"></script>
 
 </body>
 
