got to know about the flat, flatMap methods

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- <script src="challenge3.js"></script> -->
   <!-- <Script src="findMethod.js"></Script> -->
   <!-- <script src="findLast.js"></script> -->
-  <script src="someMethod.js"></script>
+  <script src="someFlatEveryFaltMap.js"></script>
 
 </body>
 
