learned about the array grouping

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -125,7 +125,8 @@
   <!-- <script src="findLast.js"></script> -->
   <!-- <script src="someFlatEveryFaltMap.js"></script> -->
   <!-- <script src="challenge4.js"></script> -->
-  <script src="sortMethod.js"></script>
+  <!-- <script src="sortMethod.js"></script> -->
+  <script src="arrayGrouping.js"></script>
 
 </body>
 
