learned about the destructive and non destructive property

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -128,6 +128,7 @@
   <!-- <script src="sortMethod.js"></script> -->
   <!-- <script src="arrayGrouping.js"></script> -->
   <!-- <script src="fillandFrommethod.js"></script> -->
+  <script src="withMethod.js"></script>
 
 </body>
 
