done with the chalenge 5

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
   <!-- <script src="sortMethod.js"></script> -->
   <!-- <script src="arrayGrouping.js"></script> -->
   <!-- <script src="fillandFrommethod.js"></script> -->
-  <script src="withMethod.js"></script>
+  <!-- <script src="withMethod.js"></script> -->
+  <!-- <Script src="finalPracticeOfAll.js"></Script> -->
+  <!-- <script src="challenge5.js"></script> -->
 
 </body>
 
