learned about the numbers in teh javaScriot

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
   <!-- <script src="withMethod.js"></script> -->
   <!-- <Script src="finalPracticeOfAll.js"></Script> -->
   <!-- <script src="challenge5.js"></script> -->
+  <script src="numbersinJs.js"></script>
 
 </body>
 
