learned about the math and rounding fucntions

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
   <!-- <script src="withMethod.js"></script> -->
   <!-- <Script src="finalPracticeOfAll.js"></Script> -->
   <!-- <script src="challenge5.js"></script> -->
-  <script src="numbersinJs.js"></script>
+  <!-- <script src="numbersinJs.js"></script> -->
+  <script src="mathandRounding.js"></script>
 
 </body>
 
