--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -132,7 +132,8 @@
   <!-- <Script src="finalPracticeOfAll.js"></Script> -->
   <!-- <script src="challenge5.js"></script> -->
   <!-- <script src="numbersinJs.js"></script> -->
-  <script src="mathandRounding.js"></script>
+  <!-- <script src="mathandRounding.js"></script> -->
+  <!-- <script src="remainderOperator.js"></script> -->
 
 </body>
 
