got to know about the date method

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
   <!-- <script src="mathandRounding.js"></script> -->
   <!-- <script src="remainderOperator.js"></script> -->
   <!-- <script src="bigInt.js"></script> -->
+  <script src="date.js"></script>
 
 </body>
 
