--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
   <!-- <script src="simpleArrayMethods.js"></script> -->
   <!-- <Script src="forEachMehtod.js"></Script> -->
   <!-- <Script src="forEachSetsMaps.js"></Script> -->
@@ -135,7 +135,7 @@
   <!-- <script src="mathandRounding.js"></script> -->
   <!-- <script src="remainderOperator.js"></script> -->
   <!-- <script src="bigInt.js"></script> -->
-  <script src="date.js"></script>
+  <!-- <script src="date.js"></script> -->
 
 </body>
 
