learned about the date operations

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   <!-- <script src="remainderOperator.js"></script> -->
   <!-- <script src="bigInt.js"></script> -->
   <!-- <script src="date.js"></script> -->
+  <!-- <script src="dateOperations.js"></script> -->
 
 </body>
 
